# localestia

./: .dockerignore  .gitignore  Cargo.toml  DOCKER.md  Dockerfile  README.md  dev.env  docker-compose.yaml  docker-compose.yml  justfile
contracts/: remappings.txt
contracts/cache/: solidity-files-cache.json
contracts/lib/: IBlobstreamX.sol
contracts/scripts/: deploy_mock_blobstream.sh
explorer/: package.json
explorer/src/: index.ts
scripts/: setup_anvil.sh
src/: cli.rs  error.rs  lib.rs  main.rs  relayer.rs  types.rs
src/grpc/: auth.rs  gas_estimator.rs  mod.rs  node_info.rs  tx_service.rs  tx_status.rs
src/rpc/: api.rs  blob.rs  blobstream.rs  header.rs  mod.rs  server.rs  share.rs
src/storage/: mod.rs  redis_storage.rs
src/utils/: header_utils.rs  mod.rs
tests/: cli_curl.rs  compat_blob.rs  compat_blobstream.rs  compat_header.rs  compat_report.rs  compat_share.rs  grpc.rs  process_server.rs
tests/utils/: mod.rs
ui/: package.json
ui/src/: index.ts
